Get more done man

--- a/index.html
+++ b/index.html
@@ -50,29 +50,18 @@
             <li><a href="forms.html"> <i class="icon-form"></i>Corporate                             </a></li>
             <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Statistics                             </a></li>
             <li><a href="tables.html"> <i class="icon-grid"></i>Departments                             </a></li>
-            <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Example dropdown </a>
+            <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Gallery </a>
               <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                <li><a href="#">Management</a></li>
-                <li><a href="#">Production</a></li>
-                <li><a href="#">Maintainace</a></li>
+                <li><a href="#">Pictures</a></li>
+                <li><a href="#">Video</a></li>
+                <li><a href="#">Extras</a></li>
               </ul>
             </li>
-            <li><a href="login.html"> <i class="icon-interface-windows"></i>News letter                            </a></li>
-            <li> <a href="#"> <i class="icon-mail"></i>Contacts
+            <li><a href="https://mailchi.mp/5abc3a0bc231/hurplastic"> <i class="icon-interface-windows"></i>News letter                            </a></li>
+            <li> <a href="login.html"> <i class="icon-mail"></i>Contacts
                 <div class="badge badge-warning">6 New</div></a></li>
           </ul>
         </div>
-        <div class="admin-menu">
-          <h5 class="sidenav-heading">Second menu</h5>
-          <ul id="side-admin-menu" class="side-menu list-unstyled"> 
-            <li> <a href="#"> <i class="icon-screen"> </i>Videos</a></li>
-            <li> <a href="#"> <i class="icon-flask"> </i>Science
-                <div class="badge badge-info">Special</div></a></li>
-            <li> <a href=""> <i class="icon-flask"> </i>Education</a></li>
-            <li> <a href=""> <i class="icon-picture"> </i>Gallery</a></li>
-          </ul>
-        </div>
-      </div>
     </nav>
     <div class="page">
       <!-- navbar-->
